# cmd/api/auth.go
@@ -7,6 +7,7 @@ import (
 
 	"github.com/Kaungmyatkyaw2/book-store-api/internal/data"
 	"github.com/Kaungmyatkyaw2/book-store-api/internal/validator"
+	"golang.org/x/oauth2"
 )
 
 // LoginAccount godoc
@@ -56,6 +57,11 @@ func (app *application) loginHandler(w http.ResponseWriter, r *http.Request) {
 
 	}
 
+	if user.AuthProvider != data.CredentialAuthProvider {
+		app.badRequestResponse(w, r, errors.New("your account is not registerd with credentials"))
+		return
+	}
+
 	match, err := user.Password.Matches(input.Password)
 	if err != nil {
 		app.serverErrorResponse(w, r, err)
@@ -65,6 +71,117 @@ func (app *application) loginHandler(w http.ResponseWriter, r *http.Request) {
 	if !match {
 		app.invalidCredentialsResponse(w, r)
 		return
+	}
+
+	token, err := app.createJWTToken(user.ID, time.Now().Add(time.Hour*24).Unix())
+
+	if err != nil {
+		app.serverErrorResponse(w, r, err)
+		return
+	}
+
+	err = app.writeJson(w, http.StatusOK, envelope{"token": token}, nil)
+
+	if err != nil {
+		app.serverErrorResponse(w, r, err)
+	}
+
+}
+
+// GoogleLogin godoc
+// @Summary Log in with google
+// @Description Login to an account using google oauth
+// @Tags Authentication
+// @Produce  json
+// @Success 200 {object} GoogleLoginResponse "Return Redirect URL to continue Login with google"
+// @Failure 500 {object} InternalServerErrorResponse "Internal Server Error"
+// @Router /v1/auth/google [get]
+func (app *application) googleLoginHandler(w http.ResponseWriter, r *http.Request) {
+
+	oauthState := app.generateStateOauthCookie(w)
+
+	url := app.googleOauth.AuthCodeURL(oauthState, oauth2.AccessTypeOffline, oauth2.ApprovalForce)
+
+	err := app.writeJson(w, http.StatusOK, envelope{"url": url}, nil)
+
+	if err != nil {
+		app.serverErrorResponse(w, r, err)
+	}
+}
+
+// GoogleLoginCallback godoc
+// @Summary Callback for Google Login
+// @Description Callback for google successful login
+// @Tags Authentication
+// @Produce  json
+// @Success 200 {object} LoginResponse "Login success"
+// @Failure 500 {object} InternalServerErrorResponse "Internal Server Error"
+// @Failure 400 {object} GeneralErrorResponse "Bad Request Error"
+// @Router /v1/auth/google/callback [get]
+func (app *application) googleCallbackHandler(w http.ResponseWriter, r *http.Request) {
+
+	code := r.FormValue("code")
+
+	userInfo, err := app.getOauthUserInfo(code)
+
+	if err != nil {
+		app.serverErrorResponse(w, r, err)
+		return
+	}
+
+	existingUser, err := app.models.Users.GetByEmail(userInfo.Email)
+
+	if err != nil && !errors.Is(err, data.ErrRecordNotFound) {
+		app.serverErrorResponse(w, r, err)
+		return
+	}
+
+	if existingUser != nil {
+
+		if existingUser.AuthProvider == data.CredentialAuthProvider {
+			app.badRequestResponse(w, r, errors.New("your account is created with credentials"))
+			return
+		}
+
+		token, err := app.createJWTToken(existingUser.ID, time.Now().Add(time.Hour*24).Unix())
+
+		if err != nil {
+			app.serverErrorResponse(w, r, err)
+			return
+		}
+
+		err = app.writeJson(w, http.StatusOK, envelope{"token": token}, nil)
+
+		if err != nil {
+			app.serverErrorResponse(w, r, err)
+		}
+
+		return
+
+	}
+
+	user := &data.User{
+		Name:      userInfo.Name,
+		Email:     userInfo.Email,
+		Picture:   userInfo.Picture,
+		Activated: true,
+	}
+
+	err = user.Password.Set(userInfo.ID)
+
+	if err != nil {
+		app.serverErrorResponse(w, r, err)
+		return
+	}
+
+	user.AuthProvider = data.GoogleOauthProvider
+
+	err = app.models.Users.Insert(user)
+
+	if err != nil {
+		app.serverErrorResponse(w, r, err)
+		return
+
 	}
 
 	token, err := app.createJWTToken(user.ID, time.Now().Add(time.Hour*24).Unix())
